objects/vlocity_ins__OrchestrationItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Account__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssignedToManualQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To Manual Queue</label>
        <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
        <relationshipLabel>Assigned Orchestration Items</relationshipLabel>
        <relationshipName>AssignedOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssignedToUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assigned Orchestration Items</relationshipLabel>
        <relationshipName>AssignedOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributesEncodingStyle__c</fullName>
        <label>Attributes Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutoTaskParameters__c</fullName>
        <inlineHelpText>Parameters passed to Auto Task</inlineHelpText>
        <label>Auto Task Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalloutParameters__c</fullName>
        <description>Callout Parameters to be considered for Request Payload generation in System Interface.</description>
        <label>Callout Parameters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__CalloutParameters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CancelAmendBehaviour__c</fullName>
        <label>Cancel/Amend Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Freeze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConditionData__c</fullName>
        <label>ConditionData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomTaskExecutionURL__c</fullName>
        <inlineHelpText>Customization : url for custom VF page or Omni which would launch on selection of any task action/name of the item in a manual queue.</inlineHelpText>
        <label>Custom Task Execution URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DurationCompletedInDays__c</fullName>
        <description>Duration Completed (in days)</description>
        <formula>IF (TEXT ( vlocity_ins__State__c ) = &quot;Completed&quot;, vlocity_ins__DurationInDays__c, IF ( ISNULL(vlocity_ins__PercentageComplete__c), 0, ( vlocity_ins__PercentageComplete__c * vlocity_ins__DurationInDays__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Completed (in days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DurationInDays__c</fullName>
        <description>Duration in days</description>
        <formula>CASE ( vlocity_ins__LengthUnit__c , &quot;Seconds&quot;, (vlocity_ins__ItemLength__c/86400), &quot;Business Hours&quot;, (vlocity_ins__ItemLength__c/24), &quot;Calendar Hours&quot;, (vlocity_ins__ItemLength__c/24), &quot;Business Days&quot;, (vlocity_ins__ItemLength__c/1), &quot;Calendar Days&quot;, (vlocity_ins__ItemLength__c/1), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (in days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndOfSequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ErrorQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error Queue</label>
        <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
        <relationshipLabel>Orchestration Items (Manual Queue)</relationshipLabel>
        <relationshipName>Orchestration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EventConditionData__c</fullName>
        <label>Event Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExecutionLog__c</fullName>
        <label>Execution Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpectedCompletionDate__c</fullName>
        <label>Requested Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FulfilmentRequestLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fulfilment Request Line</description>
        <inlineHelpText>Fulfilment Request Line</inlineHelpText>
        <label>Fulfilment Request Line</label>
        <referenceTo>vlocity_ins__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Orchestration Items (deprecated)</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPointOfNoReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Point Of No Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSequenceBreak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sequence Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSkipBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemImplementationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item Implementation</description>
        <label>Item Implementation</label>
        <referenceTo>vlocity_ins__ItemImplementation__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemLength__c</fullName>
        <label>Item Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JeopardySafetyIntervalUnit__c</fullName>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JeopardyStatus__c</fullName>
        <formula>IF((ISBLANK(vlocity_ins__ExpectedCompletionDate__c) || ISNULL(vlocity_ins__ExpectedCompletionDate__c)) || (ISBLANK(vlocity_ins__DueDate__c) || ISNULL(vlocity_ins__DueDate__c)), &apos;Green&apos;,
            IF(vlocity_ins__DueDate__c &gt;= vlocity_ins__ExpectedCompletionDate__c, &apos;Red&apos;,
            CASE(vlocity_ins__JeopardySafetyIntervalUnit__c,
            &apos;Seconds&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c/(24*60*60) &lt;= vlocity_ins__ExpectedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Calendar Hours&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c/24 &lt;= vlocity_ins__ExpectedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Calendar Days&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c &lt;= vlocity_ins__ExpectedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            /* TODO: Gap - business intervals doesn&apos;t support business calendar */
            &apos;Business Hours&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c/24 &lt;= vlocity_ins__ExpectedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Business Days&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c &lt;= vlocity_ins__ExpectedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Green&apos;)
            ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jeopardy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadTimeCompleted__c</fullName>
        <label>Lead Time (Completed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadTimeRunning__c</fullName>
        <label>Lead Time (Running)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LengthUnit__c</fullName>
        <label>Length Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ManualQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual Queue</label>
        <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaximumNumberOfRetries__c</fullName>
        <label>Maximum Number of Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfRetries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Number Of Retries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Item Definition</label>
        <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemTypeName__c</fullName>
        <label>Orchestration Item Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemType__c</fullName>
        <label>Orchestration Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationPlanDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan Definition</label>
        <referenceTo>vlocity_ins__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationPlanDefinition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationPlanId__c</fullName>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_ins__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Queue</label>
        <referenceTo>vlocity_ins__OrchestrationQueue__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderFulfilmentRequest__c</fullName>
        <formula>IF (ISBLANK(vlocity_ins__OrderItemId__c),
HYPERLINK(&quot;/&quot; &amp; vlocity_ins__FulfilmentRequestLineId__r.vlocity_ins__FulfilmentRequestID__c, vlocity_ins__FulfilmentRequestLineId__r.vlocity_ins__FulfilmentRequestID__r.Name),
HYPERLINK(&quot;/&quot; &amp; vlocity_ins__OrderItemId__r.OrderId, vlocity_ins__OrderItemId__r.Order.OrderNumber))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order/Fulfilment Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Orchestration Items (deprecated)</relationshipLabel>
        <relationshipName>OrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderItemsNodeName__c</fullName>
        <defaultValue>&apos;orderItems&apos;</defaultValue>
        <label>Order Items Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayloadData__c</fullName>
        <label>PayloadData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PercentageComplete__c</fullName>
        <description>Percentage Complete</description>
        <label>Percentage Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. High</fullName>
                    <color>#FF0000</color>
                    <label>1. High</label>
                </value>
                <value>
                    <fullName>2. Normal</fullName>
                    <color>#009900</color>
                    <default>true</default>
                    <label>2. Normal</label>
                </value>
                <value>
                    <fullName>3. Low</fullName>
                    <color>#3366FF</color>
                    <label>3. Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessAfterExpression__c</fullName>
        <label>Process After Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessAfter__c</fullName>
        <label>Process After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestItemsEncodingStyle__c</fullName>
        <label>Request Items Encoding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                    <default>true</default>
                    <label>Structure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestItemsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Items Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RequestItemsOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestedStartDate__c</fullName>
        <label>Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponseAttrsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Attrs Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RespAttrsOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponseItemsVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Items Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>RespItemsOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResponseVlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Item Definitions</relationshipLabel>
        <relationshipName>ResponseOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Main Order Item</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
                <value>
                    <fullName>Swimlane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Fatally Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SystemInterfaceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Interface</label>
        <referenceTo>vlocity_ins__SystemInterface__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>SystemInterfaceId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimeoutMs__c</fullName>
        <label>Timeout (ms)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimestampCompleted__c</fullName>
        <label>Timestamp (Completed)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimestampReady__c</fullName>
        <label>Timestamp (Ready)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimestampRunning__c</fullName>
        <label>Timestamp (Running)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TranslatedState__c</fullName>
        <formula>TEXT( vlocity_ins__State__c )</formula>
        <label>Translated State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Vlocity DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>VlocityDataRaptorBundleId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityDataRaptorBundleName__c</fullName>
        <label>VlocityDataRaptorBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__compensatedOrchestrationItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compensated OrchestrationItem</label>
        <referenceTo>vlocity_ins__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Compensating Orchestration Items</relationshipLabel>
        <relationshipName>CompensatingOrchestrationItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Orchestration Item</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orchestration Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__TimeoutMinValueValidation</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__TimeoutMs__c &lt; 0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__TimeoutMs__c</errorDisplayField>
        <errorMessage>Timeout cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>